# addwikigeolocation

./: .env.example  .gitignore  README.md  add_camera_location_from_exif.py  addgeolocation.py  commons_client.py  configConnection.py  list_nonfile_pages.py  processor.py  pyproject.toml  remove_geolocation.py  restore_originals.py  rollback_descriptions.py  scanner.py  tag_for_deletion.py  translate_descriptions.py
