[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addwikigeolocation"
version = "0.1.0"
description = "Script to enrich Commons images with GPS metadata"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9",
  "tqdm>=4.66",
  "mwclient>=0.10",
  "requests>=2.31",
  "Pillow>=9.0",
  "piexif>=1.1.3",
  "GPSPhoto>=2.2.3",
  "urllib3<2",
]

[project.scripts]
addwikigeolocation = "addgeolocation:app"
