[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addwikigeolocation"
version = "0.1.0"
description = "Scripts to enrich Commons images with GPS metadata and related utilities"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.9",
  "tqdm>=4.66",
  "mwclient>=0.10",
  "requests>=2.31",
  "Pillow>=9.0",
  "piexif>=1.1.3",
  "GPSPhoto>=2.2.3",
  "urllib3<2",
  "argostranslate>=1.9.6",
]

[project.scripts]
addwikigeolocation = "addgeolocation:app"
restore_originals = "restore_originals:app"
translate_descriptions = "translate_descriptions:app"
remove_geolocation = "remove_geolocation:app"
rollback_descriptions = "rollback_descriptions:app"
tag_for_deletion = "tag_for_deletion:app"

[tool.setuptools]
py-modules = [
  "addgeolocation",
  "commons_client",
  "processor",
  "scanner",
  "restore_originals",
  "translate_descriptions",
  "remove_geolocation",
  "rollback_descriptions",
  "configConnection",
]
